Fix stonecutter crash due to immutable collection